@@ -1,3 +1,9 @@
+bubba-backend (2.2.0) hugo vincent; urgency=low
+
+  * Fixed restore settings. (Closes: #1598)
+
+ -- PA Nilsson <pa@excito.com>  Thu, 28 Oct 2010 11:07:36 +0200
+
 bubba-backend (2.1~pre66) vincent hugo; urgency=low
 
   * Make sure cronfile has sane permissions (closes #1591) 
